# AerialVehicleControl.jl

./: .gitignore  CodeOcean.jl  LICENSE  Manifest.toml  Project.toml  README.md
docs/: DOCS.md  Doxyfile  bibliography.bib
examples/: example_FOF_attitude.jl  example_FOF_observer_sim.jl  example_FSF_attitude.jl  example_FSF_attitude_utils.jl  example_attitude_FSF.jl  example_attitude_FSF_utils.jl  example_reference_attitude.jl
include/: cont_attitude_FOF_SO3_continuous.h  cont_attitude_FSF_SO3_continuous.h  cont_attitude_FSF_SO3_robust.h  cont_attitude_FSF_SU2_continuous.h  cont_attitude_FSF_SU2_discontinuous.h  cont_attitude_FSF_SU2_robust.h  cont_attitude_reference_generator.h  cont_attitude_utils.h  cont_main.h  cont_math.h  cont_matrix_math.h  cont_power_distribution.h  cont_types.h
src/: AerialVehicleControl.jl  Makefile  cont_attitude_FOF_SO3_continuous.c  cont_attitude_FSF_SO3_continuous.c  cont_attitude_FSF_SO3_robust.c  cont_attitude_FSF_SU2_continuous.c  cont_attitude_FSF_SU2_discontinuous.c  cont_attitude_FSF_SU2_robust.c  cont_attitude_reference_generator.c  cont_attitude_utils.c  cont_main.c  cont_math.c  cont_matrix_math.c  cont_power_distribution.c  cont_types.c
test/: runtests.jl
test/controller_implementations/: test_FOF_continuous_SO3.jl  test_FSF_attitude_utils.jl  test_FSF_continuous_SO3.jl  test_FSF_continuous_SU2.jl  test_FSF_discontinuous_SU2.jl  test_FSF_robust_SO3.jl  test_FSF_robust_SU2.jl
test/controller_math/: test_SO3_maps.jl  (+2 more)
utils/: CMakeLists.txt  cont_compile.jl  cont_help_functions.jl  cont_sys_id.jl  cont_types.jl
(+11 files in other folders)
